Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-119241

Context properties broken when named specifically

    XMLWordPrintable

Details

    • All
    • 5ada19797 (dev)

    Description

      Commit f5aecbde9138b9bdde4c747cb6c7e8f145e96630 breaks context properties that have the same name as a registered QML type (at least that's my working theory ).

      Currently qtapplicationmanager is stuck in sub-module integration because of this issue:

      I did look into that commit, but couldn't see anything obvious jumping out at me.

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ulherman Ulf Hermann
            rgriebl Robert Griebl
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes