Drop bogus name from ApplicationInterface foreign declaration

That type is anonymous. It has no name. Apparently we rely on the name
to be available for context properties.

Fixes: QTBUG-119241
Change-Id: I448a5ca4ad2024a850c5ed065bd9e918cc6dd396
Reviewed-by: Robert Griebl <robert.griebl@qt.io>